--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,12 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ['7.2.5', '7.3', '7.4', '8.0', '8.1', '8.2']
+                php: ['8.1', '8.2', '8.3', '8.4']
                 include:
-                    - php: '7.4'
+                    - php: '8.1'
                       deps: lowest
                       deprecations: max[self]=0
-                    - php: '8.0'
+                    - php: '8.4'
                       deps: highest
 
         steps:
@@ -40,11 +40,8 @@ jobs:
               with:
                   dependency-versions: '${{ matrix.deps }}'
 
-            - name: Install PHPUnit
-              run: vendor/bin/simple-phpunit install
-
             - name: Run tests
-              run: vendor/bin/simple-phpunit
+              run: vendor/bin/phpunit
               env:
                   SYMFONY_DEPRECATIONS_HELPER: '${{ matrix.deprecations }}'
 
